epoch_derive/tests/compile-fail/subset_of/non_enum_union.rs
use epoch_derive::SubsetOf;

#[derive(SubsetOf)]
#[subset_of(some::path::AppEvent)]
union BadUnion {
    a: u32,
    b: f32,
}

fn main() {}
