epoch_derive/tests/compile-fail/subset_of/non_enum_union.stderr
error: SubsetOf can only be derived for enums, found union
 --> tests/compile-fail/subset_of/non_enum_union.rs:5:7
  |
5 | union BadUnion {
  |       ^^^^^^^^
